Fix project img overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -124,20 +124,20 @@ nav p a {
 }
 
 .project-img {
-  height: calc(100% - 15px);
+  height: 95%;
   position: absolute;
   z-index: 0;
 }
 
 .project-background {
-  height: calc(100% - 15px);
+  height: 95%;
   position:absolute;
   padding-left: 10%;
   z-index: 1;
 }
 
 .project-info {
-  height: calc(100% - 15px);
+  height: 95%;
   width: 700px;
   position: absolute;
   z-index: 2;
@@ -157,7 +157,7 @@ nav p a {
 .project-skills {
   display: flex;
   justify-content: space-between;
-  padding: 10% 20%
+  padding: 10% 20%;
 }
 
 .skill {
